--- a/YAML/library_3_8.yaml
+++ b/YAML/library_3_8.yaml
@@ -1190,6 +1190,7 @@ Attack Categories:
 - Installation of Malware
 - Misuse of Resources
 - File
+- Other
 Attacks:
      Fuzzing Attacks:
      - Fuzzing,0
@@ -1326,6 +1327,8 @@ Attacks:
      - 802.11x - TP-Link Archer A7 Exploit,2
      - SQL Injection,2
      - Misuse of Resources,1
+     - Other,1
+     - General - Sleep,2
 Inspection Flow Graphs:
      802.11x Adapter:
      - None
@@ -4374,6 +4377,11 @@ Protocols:
                          Hardware:
                               USRP B2x0:
                                    Flow Graph: General_OOK_USRPB210_OOK_Transmit.py
+               General - Sleep:
+                    General:
+                         Hardware:
+                              Computer:
+                                   Python3 Script: General_General_Computer_Sleep.py
           Modulation Types:
           - General
           - OOK
