Support for RSPduo and RSPdx: part 1 of 2

--- a/.gitmodules
+++ b/.gitmodules
@@ -166,3 +166,7 @@
 	path = Custom_Blocks/maint-3.10/gr-mixalot
 	url = https://github.com/unsynchronized/gr-mixalot
 	branch = main
+[submodule "Custom_Blocks/maint-3.10/gr-sdrplay3"]
+	path = Custom_Blocks/maint-3.10/gr-sdrplay3
+	url = https://github.com/fventuri/gr-sdrplay3
+	branch = main
