--- a/Custom_Blocks/maint-3.10/gr-ainfosec/grc/CMakeLists.txt
+++ b/Custom_Blocks/maint-3.10/gr-ainfosec/grc/CMakeLists.txt
@@ -22,5 +22,6 @@ install(FILES
     ainfosec_UDP_to_Wireshark.block.yml
     ainfosec_UDP_to_Wireshark_Async.block.yml
     ainfosec_wideband_detector1.block.yml
-    ainfosec_msg_str_to_PUB.block.yml DESTINATION share/gnuradio/grc/blocks
+    ainfosec_msg_str_to_PUB.block.yml
+    ainfosec_ook_generator.block.yml DESTINATION share/gnuradio/grc/blocks
 )
